--- a/public/sass/bodystyle.css
+++ b/public/sass/bodystyle.css
@@ -751,4 +751,163 @@ input {
     right: 0rem;
   }
 }
+
+@media only screen and (max-width: 400px) and (min-width: 375px) and (orientation: portrait) {
+  .login-body {
+    background-image: url(../asset/img/599.jpg);
+    padding: 102px 0;
+    text-align: -webkit-center;
+    height: 1250px;
+  }
+  .login-reg-form {
+    width: 800px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+  }
+  form.form-signup {
+    width: 700px;
+    position: relative;
+    right: 8em;
+  }
+  .scl-reg {
+    position: relative;
+    right: 40px !important;
+  }
+  .signup-button {
+    position: relative;
+    right: 3em;
+  }
+  .social-log {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 101%;
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+  }
+  .signup-inputs {
+    width: 130%;
+    padding: 12px 20px;
+    margin: 8px 0;
+    display: inline-block;
+    border: 1px solid #e2dbd424;
+    border-radius: 4px;
+    -webkit-box-sizing: border-box;
+    box-sizing: border-box;
+    position: relative;
+    right: 4rem;
+  }
+}
+
+@media only screen and (max-width: 360px) and (min-width: 320px) and (orientation: portrait) {
+  .login-reg-form {
+    width: 950px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+  }
+  form.form-signup {
+    width: 200%;
+    position: relative;
+    right: 9em;
+  }
+  .scl-reg {
+    position: relative;
+    right: 20px !important;
+  }
+  .signup-button {
+    position: relative;
+    right: 30px;
+  }
+}
+
+@media only screen and (max-width: 540px) and (min-width: 411px) and (orientation: portrait) {
+  .login-reg-form {
+    width: 1000px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+  }
+  form.form-signup {
+    width: 220%;
+    position: relative;
+    right: 12rem;
+  }
+  .scl-reg {
+    position: relative;
+    right: 1rem !important;
+  }
+  .signup-button {
+    position: relative;
+    right: 30px;
+  }
+}
+
+@media only screen and (max-width: 300px) and (min-width: 280px) {
+  .login-reg-form {
+    width: 759px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+  }
+  form.form-signup {
+    width: 155%;
+    position: relative;
+    right: 4rem;
+  }
+  .scl-reg {
+    position: relative;
+    right: 23px !important;
+  }
+  .signup-button {
+    position: relative;
+    right: 35px;
+  }
+}
+
+@media only screen and (max-width: 640px) and (min-width: 360px) and (orientation: landscape) {
+  .login-reg-form {
+    width: 900px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+  }
+  form.form-signup {
+    width: 200%;
+    position: relative;
+    right: 9rem;
+  }
+  .scl-reg {
+    position: relative;
+    right: 1rem !important;
+  }
+  .signup-button {
+    position: relative;
+    right: 32px;
+  }
+}
+
+@media only screen and (max-width: 736px) and (min-width: 411px) and (orientation: landscape) {
+  .login-reg-form {
+    width: 900px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+  }
+  form.form-signup {
+    width: 200%;
+    position: relative;
+    right: 10rem;
+  }
+  .scl-reg {
+    position: relative;
+    right: 1rem !important;
+  }
+  .signup-button {
+    position: relative;
+    right: 24px;
+  }
+}
 /*# sourceMappingURL=bodystyle.css.map */
