--- a/public/sass/bodystyle.scss
+++ b/public/sass/bodystyle.scss
@@ -316,8 +316,8 @@ i.fa.fa-star {
   line-height: 1;
   letter-spacing: 0.01em;
   -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  -ms-flex-align: center;
+  align-items: center;
   text-align: center;
   width: 100%;
 }
@@ -343,8 +343,8 @@ i.fa.fa-star {
   width: 100%;
   text-align: center;
   -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -ms-grid-row-align: center;
+  align-self: center;
 }
 
 /*.shop-item-image:hover .shop-cart-icon img{
@@ -567,8 +567,8 @@ button.addcart {
     display: flex;
     margin: 2.5625rem 1.8rem;
     -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    -ms-flex-pack: justify;
+    justify-content: space-between;
     height: auto;
   }
   span.filter-show {
@@ -707,20 +707,19 @@ input {
     justify-content: center;
     position: relative;
     right: 6rem;
-}
-.social-log-reg {
-  width: 108%;
-  position: relative;
-  
-}
-form.form-signup {
-  width: 157%;
-}
-.signup-inputs {
-  width: 113%;
-  position: relative;
-  left: -7rem;
-}
+  }
+  .social-log-reg {
+    width: 108%;
+    position: relative;
+  }
+  form.form-signup {
+    width: 157%;
+  }
+  .signup-inputs {
+    width: 113%;
+    position: relative;
+    left: -7rem;
+  }
 }
 
 @media only screen and (max-width: 1366px) and (min-width: 1024px) and (orientation: portrait) {
@@ -733,28 +732,236 @@ form.form-signup {
     position: relative;
     right: 26%;
   }
-
   form.form-signup {
     width: 100%;
+  }
+  .signup-inputs {
+    width: 113%;
+    position: relative;
+    left: -2rem;
+  }
+  .signup-button {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
+    justify-content: center;
+    position: relative;
+    right: 0rem;
+  }
 }
-.signup-inputs {
-  width: 113%;
+
+
+@media only screen 
+and (max-width: 400px)
+and (min-width: 375px)
+and (orientation: portrait)
+{
+
+
+  .login-body {
+    background-image: url(../asset/img/599.jpg);
+    padding: 102px 0;
+    text-align: -webkit-center;
+    height: 1250px;
+}
+.login-reg-form {
+  width: 800px;
+  border: solid #2a2c2f;
+  background: #2a2c2fc7;
+  border-radius: 5px;
+}
+form.form-signup {
+  width: 700px;
   position: relative;
-  left: -2rem;
+  right: 8em;
+}
+.scl-reg {
+  position: relative;
+  right: 40px !important;
 }
 .signup-button {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-  -ms-flex-pack: center;
-  justify-content: center;
   position: relative;
-  right: 0rem;
+  right: 3em;
+}
+
+.social-log {
+  display: flex;
+  width: 101%;
+  justify-content: space-between;
+}
+.signup-inputs {
+  width: 130%;
+  padding: 12px 20px;
+  margin: 8px 0;
+  display: inline-block;
+  border: 1px solid #e2dbd424;
+  border-radius: 4px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  position: relative;
+  right: 4rem;
+}
+
+
+
+}
+
+// @media only screen 
+// and (max-width:736px)
+// and (min-width:414px)
+// and (orientation:portrait)
+// {
+
+//   .signup-inputs {
+//     width: 106%;
+//     position: relative;
+//     left: -4rem;
+// }
+
+
+// }
+
+@media only screen 
+and (max-width:360px)
+and (min-width:320px)
+and (orientation:portrait)
+{
+
+  .login-reg-form {
+    width: 950px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+}
+form.form-signup {
+  width: 200%;
+  position: relative;
+  right: 9em;
+}
+.scl-reg {
+  position: relative;
+  right: 20px!important;
+}
+
+.signup-button {
+  position: relative;
+  right: 30px;
+}
+
+}
+
+@media only screen 
+and (max-width:540px)
+and (min-width:411px)
+and (orientation:portrait)
+{
+  .login-reg-form {
+    width: 1000px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+}
+
+form.form-signup {
+  width: 220%;
+  position: relative;
+  right: 12rem;
+}
+.scl-reg {
+  position: relative;
+  right: 1rem!important;
+}
+
+.signup-button {
+  position: relative;
+  right: 30px;
+}
+
+}
+
+@media only screen 
+and (max-width: 300px)
+and (min-width: 280px){
+
+
+  .login-reg-form {
+    width: 759px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+}
+form.form-signup {
+  width: 155%;
+  position: relative;
+  right: 4rem;
+}
+.scl-reg {
+  position: relative;
+  right: 23px!important;
+}
+.signup-button {
+  position: relative;
+  right: 35px;
+}
+
+}
+
+@media only screen 
+and (max-width: 640px)
+and (min-width: 360px)
+and (orientation:landscape){
+
+  .login-reg-form {
+    width: 900px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+}
+form.form-signup {
+  width: 200%;
+  position: relative;
+  right: 9rem;
+}
+.scl-reg {
+  position: relative;
+  right: 1rem!important;
+}
+
+.signup-button {
+  position: relative;
+  right: 32px;
+}
+
+}
+
+@media only screen 
+and (max-width: 736px)
+and (min-width: 411px)
+and (orientation: landscape)
+{
+
+  .login-reg-form {
+    width: 900px;
+    border: solid #2a2c2f;
+    background: #2a2c2fc7;
+    border-radius: 5px;
+}
+form.form-signup {
+  width: 200%;
+  position: relative;
+  right: 10rem;
+}
+.scl-reg {
+  position: relative;
+  right: 1rem!important;
+}
+
+.signup-button {
+  position: relative;
+  right: 24px;
 }
 }
-
-
-
 
 /*# sourceMappingURL=bodystyle.css.map */
